Fix carousel alignement

--- a/dorval/css/style.css
+++ b/dorval/css/style.css
@@ -372,6 +372,11 @@ figure{
     padding: 6rem;
   }
 }
+@media screen and (min-width: 1440px) and (max-width: 2880px) {
+  .carousel-item{
+    padding: 13rem;
+  }
+}
 
 .carousel-indicators {
   position: absolute;
@@ -584,6 +589,11 @@ figure{
 .accordion-collapse{
   background-color: #0f3f4f;
 }
+
+#icon-btn{
+  font-size: 15px;
+}
+
 
 
 /* Contact Section */
